--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ org.epic.perleditor.prefs
 org.erlide.ui.prefs
 org.python.pydev.prefs
 org.sweetlemonade.eclipse.json.prefs
+com.adobe.flexide.project.multiplatform.prefs
