--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ org.erlide.ui.prefs
 org.python.pydev.prefs
 org.sweetlemonade.eclipse.json.prefs
 com.adobe.flexide.project.multiplatform.prefs
+org.eclipse.core.net.prefs
